--- a/tablets.html
+++ b/tablets.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="myscript.js"></script>
     <title>Document</title>
-    <div class="container w-25">
+    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg my-navbar">
-        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand mx-5" href="index.html">Home</a>
         <div>
           <ul class="navbar-nav mr-auto">
             <a class="navbar-tablets" href="tablets.html">Tablets</a>
@@ -23,29 +23,5 @@
       </nav>
     </div>
   </head>
-  <body>
-    <div class="landing container-fluid">
-      <h1 class="container my-container1">Drawing Tablets</h1>
-    </div>
-    <div>
-      <div class="container-fluid blurb">
-        <div class="row">
-          <h1>Tablets! What are they</h1>
-        </div>
-        <div class="row">
-          <p>these are what tablets are</p>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="container-fluid tablet-types">
-        <div class="row">
-          <h1>Different types of tablets</h1>
-        </div>
-        <div class="row">
-          <h5>Pen Tablets</h5>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
