--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="myscript.js"></script>
     <title>Document</title>
-    <div class="container w-25">
+  </head>
+  <body>
+    <div class="container m-0">
       <nav class="navbar navbar-expand-lg my-navbar">
-        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand mx-5" href="index.html">Home</a>
         <div>
           <ul class="navbar-nav mr-auto">
             <a class="navbar-tablets" href="tablets.html">Tablets</a>
@@ -22,8 +24,6 @@
         </div>
       </nav>
     </div>
-  </head>
-  <body>
     <div class="landing container-fluid">
       <h1 class="container my-container1">Drawing Tablets</h1>
     </div>
