--- a/tablets.html
+++ b/tablets.html
@@ -12,16 +12,20 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="myscript.js"></script>
     <title>Document</title>
-    <div class="container-fluid">
+  </head>
+  <body>
+    <div class="container m-0">
       <nav class="navbar navbar-expand-lg my-navbar">
         <a class="navbar-brand mx-5" href="index.html">Home</a>
         <div>
           <ul class="navbar-nav mr-auto">
-            <a class="navbar-tablets" href="tablets.html">Tablets</a>
+            <li><a href="tablets.html"><span class="navbar-tablets"></span>Tablets</a></li>
           </ul>
         </div>
       </nav>
     </div>
-  </head>
-  <body></body>
+    <div class="pen-tablets">
+      <h1>Pen Tablets</h1>
+    </div>
+  </body>
 </html>
