--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script src="myscript.js"></script>
+    <script type="module" src="myscript.js"></script>
     <title>Document</title>
   </head>
   <body>
     <div class="container m-0">
       <nav class="navbar navbar-expand-lg my-navbar">
-        <a class="navbar-brand mx-5" href="index.html">Home</a>
+        <a class="navbar-nav mx-5" href="index.html">Home</a>
         <div>
           <ul class="navbar-nav mr-auto">
             <a class="navbar-tablets" href="tablets.html">Tablets</a>
