--- a/tablets.html
+++ b/tablets.html
@@ -10,16 +10,16 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script src="myscript.js"></script>
+    <script type="module" src="myscript.js"></script>
     <title>Document</title>
   </head>
   <body>
     <div class="container m-0">
       <nav class="navbar navbar-expand-lg my-navbar">
-        <a class="navbar-brand mx-5" href="index.html">Home</a>
+        <a class="navbar-nav mx-5" href="index.html">Home</a>
         <div>
           <ul class="navbar-nav mr-auto">
-            <li><a href="tablets.html"><span class="navbar-tablets"></span>Tablets</a></li>
+            <a class="navbar-tablets" href="tablets.html">Tablets</a>
           </ul>
         </div>
       </nav>
