--- a/tablets.html
+++ b/tablets.html
@@ -24,8 +24,7 @@
         </div>
       </nav>
     </div>
-    <div class="pen-tablets">
-      <h1>Pen Tablets</h1>
+    <div class="tablets" id="tablets">
     </div>
   </body>
 </html>
