--- a/tablets.html
+++ b/tablets.html
@@ -10,7 +10,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script type="module" src="myscript.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script type="module" src="tablet.js"></script>
+    <script src="/path/to/masonry.pkgd.min.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -24,7 +26,6 @@
         </div>
       </nav>
     </div>
-    <div class="tablets" id="tablets">
-    </div>
+    <div id="tablets"></div>
   </body>
 </html>
