--- a/index.html
+++ b/index.html
@@ -29,20 +29,18 @@
     <div>
       <div class="container-fluid blurb">
         <div class="row">
-          <h1>Tablets! What are they</h1>
+          <h1>Why would I want one?</h1>
         </div>
         <div class="row">
-          <p>these are what tablets are</p>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="container-fluid tablet-types">
-        <div class="row">
-          <h1>Different types of tablets</h1>
-        </div>
-        <div class="row">
-          <h5>Pen Tablets</h5>
+          <p class="tablet-blurb col-md-4">
+            Why would you want a drawing tablet, you say? Well, a drawing
+            tablet, besides drawing, can perform many other things, like editing
+            videos, photos, and other various forms of media. Mostly, many
+            people buy these tablets as a way to draw online, as a way of
+            imitating the way pencil and paper work. A digital canvas, along
+            with the app, provides much more than a basic pencil and paper can;
+            allowing for an easier workflow.
+          </p>
         </div>
       </div>
     </div>
