--- a/tablets.html
+++ b/tablets.html
@@ -26,6 +26,6 @@
         </div>
       </nav>
     </div>
-    <div id="tablets"></div>
+    <div id="tablets" class="masonry"></div>
   </body>
 </html>
