reorganized detailed view

--- a/tablets.html
+++ b/tablets.html
@@ -27,5 +27,7 @@
       </nav>
     </div>
     <div id="tablets" class="masonry"></div>
+    <button id="filter"></button>
+    <div id="results"></div>
   </body>
 </html>
