--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1>Why would I want one?</h1>
         </div>
         <div class="row">
-          <p class="tablet-blurb col-md-4">
+          <p class="tablet-blurb col-4">
             Why would you want a drawing tablet, you say? Well, a drawing
             tablet, besides drawing, can perform many other things, like editing
             videos, photos, and other various forms of media. Mostly, many
