--- a/tablets.html
+++ b/tablets.html
@@ -26,8 +26,8 @@
         </div>
       </nav>
     </div>
-    <div id="tablets" class="masonry"></div>
-    <button id="filter"></button>
+    <button id="filter">button</button>
     <div id="results"></div>
+    <div id="tablets" class="masonry"></div>
   </body>
 </html>
