--- a/tablets.html
+++ b/tablets.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +9,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
     <script type="module" src="tablet.js"></script>
     <script src="/path/to/masonry.pkgd.min.js"></script>
     <title>Document</title>
@@ -26,7 +25,6 @@
         </div>
       </nav>
     </div>
-    <button id="filter">button</button>
     <div id="results"></div>
     <div id="tablets" class="masonry"></div>
   </body>
