--- a/index.html
+++ b/index.html
@@ -12,37 +12,35 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <div class="container m-0">
-      <nav class="navbar navbar-expand-lg my-navbar">
+  <body class="home-page">
+    <div class="m-0">
+      <nav class="navbar navbar-expand-lg my-navbar w-100">
         <a class="navbar-nav mx-5" href="index.html">Home</a>
-        <div>
-          <ul class="navbar-nav mr-auto">
-            <a class="navbar-tablets" href="tablets.html">Tablets</a>
-          </ul>
-        </div>
+        <a class="navbar-tablets" href="tablets.html">Tablets</a>
       </nav>
     </div>
-    <div class="landing container-fluid">
-      <h1 class="container my-container1">Drawing Tablets</h1>
-    </div>
-    <div>
-      <div class="container-fluid blurb">
-        <div class="row">
-          <h1>Why would I want one?</h1>
-        </div>
-        <div class="row">
-          <p class="tablet-blurb col-4">
-            Why would you want a drawing tablet, you say? Well, a drawing
-            tablet, besides drawing, can perform many other things, like editing
-            videos, photos, and other various forms of media. Mostly, many
-            people buy these tablets as a way to draw online, as a way of
-            imitating the way pencil and paper work. A digital canvas, along
-            with the app, provides much more than a basic pencil and paper can;
-            allowing for an easier workflow.
-          </p>
+    <main>
+      <div class="landing container-fluid">
+        <h1 class="container my-container1">Drawing Tablets</h1>
+      </div>
+      <div>
+        <div class="container-fluid blurb">
+          <div class="row">
+            <h1>Why would I want one?</h1>
+          </div>
+          <div class="row">
+            <p class="tablet-blurb col-4">
+              Why would you want a drawing tablet, you say? Well, a drawing
+              tablet, besides drawing, can perform many other things, like
+              editing videos, photos, and other various forms of media. Mostly,
+              many people buy these tablets as a way to draw online, as a way of
+              imitating the way pencil and paper work. A digital canvas, along
+              with the app, provides much more than a basic pencil and paper
+              can; allowing for an easier workflow.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
