--- a/tablets.html
+++ b/tablets.html
@@ -14,18 +14,17 @@
     <script src="/path/to/masonry.pkgd.min.js"></script>
     <title>Document</title>
   </head>
-  <body>
-    <div class="container m-0">
-      <nav class="navbar navbar-expand-lg my-navbar">
+  <body class="tablet-page">
+    <div class="m-0">
+      <nav class="navbar navbar-expand-lg my-navbar w-100">
         <a class="navbar-nav mx-5" href="index.html">Home</a>
-        <div>
-          <ul class="navbar-nav mr-auto">
-            <a class="navbar-tablets" href="tablets.html">Tablets</a>
-          </ul>
-        </div>
+        <a class="navbar-tablets" href="tablets.html">Tablets</a>
       </nav>
     </div>
-    <div id="results"></div>
-    <div id="tablets" class="masonry"></div>
+    <main class="tablet-info">
+      <div id="results"></div>
+      <div id="tablets" class="masonry"></div>
+      <div id="detailed-view"></div>
+    </main>
   </body>
 </html>
