aligned description and made icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="images/icon" href="tablet-icon.png" />
+    <title>Tabledia</title>
   </head>
   <body class="home-page">
     <div class="m-0">
@@ -25,10 +32,10 @@
       </div>
       <div>
         <div class="container-fluid blurb">
-          <div class="row">
-            <h1>Why would I want one?</h1>
+          <div class="row text-center">
+            <h1>Why would you want one?</h1>
           </div>
-          <div class="row">
+          <div class="row justify-content-center">
             <p class="tablet-blurb col-4">
               Why would you want a drawing tablet, you say? Well, a drawing
               tablet, besides drawing, can perform many other things, like
