--- a/tablets.html
+++ b/tablets.html
@@ -30,7 +30,7 @@
         <a class="navbar-tablets" href="tablets.html">Tablets</a>
       </nav>
     </div>
-    <main class="tablet-info">
+    <main>
       <div id="results"></div>
       <div id="tablets" class="masonry"></div>
       <div id="detailed-view"></div>
